--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Lorena Arias Batista</h1>
-						<p>IT Lover with experience in ITSupport and data analyst enthusiast.</p><br />
+						<p>IT Lover and Data Analyst enthusiast with experience in IT Support.</p><br />
                          <a href="https://www.linkedin.com/in/ariasbatistalorena/">@LorenaArias</a></p>
 					</header>
 
