--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Lorena Arias Batista</h1>
-						<p>IT Lover and Data Analyst enthusiast with experience in IT Support.</p><br />
+						<p>IT Lover and Data Analyst enthusiast with experience in IT Support.</p>
                          <a href="https://www.linkedin.com/in/ariasbatistalorena/">@LorenaArias</a></p>
-					</header>
-
+                    </header>
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
