--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Lorena Arias Batista</h1>
 						<p>IT Lover and Data Analyst enthusiast with experience in IT Support.</p>
-                         <a href="https://www.linkedin.com/in/ariasbatistalorena/">@LorenaArias</a></p>
+                         <a href="https://www.linkedin.com/in/ariasbatistalorena/">@LorenaArias</a>
                     </header>
 				<!-- Nav -->
 					<nav id="nav">
