--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Lorena Arias Batista</h1>
-						<p>IT Lover and Data Analyst enthusiast with experience in IT Support.</p>
-                         <a href="https://www.linkedin.com/in/ariasbatistalorena/">@LorenaArias</a>
+						<p>IT Lover and Data Analyst enthusiast with experience in IT Support.
+                            <a href="https://www.linkedin.com/in/ariasbatistalorena/">@LorenaArias</a>
+                        </p>>
                     </header>
 				<!-- Nav -->
 					<nav id="nav">
