--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Lorena Arias Batista</h1>
-						<p>IT Lover and Data Analyst enthusiast with experience in IT Support.
+						<p>IT Lover and Data Analyst enthusiast with experience in IT Support.< br>
                             <a href="https://www.linkedin.com/in/ariasbatistalorena/">@LorenaArias</a>
-                        </p>>
+                        </p>
                     </header>
 				<!-- Nav -->
 					<nav id="nav">
